# mr-transport

./: .gitignore  .zenodo.json  CITATION.cff  conftest.py  pyproject.toml  reproduce.sh
.github/workflows/: test.yml
experiments/: CROSS_DOMAIN_RESULTS.md
experiments/ad_heterogeneity/: experiments.py  modal_run_ad.py
experiments/batch4_sensitivity/: PREREGISTRATION.md  run_all.py
experiments/batch6_vector_extension/: PREREGISTRATION.md
experiments/ms_heterogeneity/: EXPERIMENT_RESULTS_V2.md  experiments.py  modal_run_ms.py
mr_transport/: __init__.py  catalog.py  core.py  sensitivity.py  simulate.py
mr_transport/data/: pairs_curated.json
mrtransport/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
mrtransport/R/: classify.R  rotation.R  sensitivity.R  sheaf_q.R  simulate.R  transport.R
mrtransport/man/: alpha_sweep.Rd  classify_locus.Rd  leave_one_out.Rd  max_rotation.Rd  rotation_angle.Rd  simulate_catalog.Rd  simulate_pair.Rd  strata_needed.Rd  test_transport.Rd  transport_power.Rd  vector_sheaf_q.Rd  vector_sheaf_q_correlated.Rd  vector_sheaf_q_diagonal.Rd
mrtransport/tests/: testthat.R
mrtransport/vignettes/: tutorial.Rmd
notebooks/: tutorial.py
paper/: paper_A_v10_ajhg.tex
sheafq/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
sheafq/R/: classify.R  rotation.R  sheaf_q.R
sheafq/man/: classify_locus.Rd  max_rotation.Rd  rotation_angle.Rd  scalar_cochran_q.Rd  vector_sheaf_q.Rd  vector_sheaf_q_correlated.Rd  vector_sheaf_q_diagonal.Rd
tests/: test_core.py  test_sensitivity.py  test_simulate.py
(+45 files in other folders)
